--- a/developers.html
+++ b/developers.html
@@ -80,7 +80,7 @@
             </div>
 
             <h2>Join Our Team</h2>
-            <p>We're always looking for talented individuals who share our passion for creating exceptional, free-to-use applications. If you're interested in joining Nexus Apps, please reach out through our <a href="contact.html" style="color: var(--accent);">contact page</a>.</p>
+            <p>We're always looking for talented individuals who share our passion for creating exceptional, free-to-use applications. If you're interested in joining Nexus Apps, please reach out through our <a href="contact.html" class="link-secondary">contact page</a>.</p>
         </section>
     </main>
 
