--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <p style="color: var(--text-secondary); margin-bottom: 2rem;">Join our growing community and experience premium applications without the premium price tag.</p>
             <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
                 <a href="about.html" class="btn">Learn More</a>
-                <a href="contact.html" class="btn" style="background-color: var(--bg-secondary); color: var(--text-primary); border: 1px solid var(--border);">Contact Us</a>
+                <a href="contact.html" class="btn btn-secondary">Contact Us</a>
             </div>
         </section>
     </main>
