new privacy policies

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="app-item">
-                    <div class="app-icon">🎮</div>
+                    <div class="app-icon"><img src="assets/app-icons/tile-rush.png" alt="Tile Rush" class="app-icon-img"></div>
                     <div class="app-info">
                         <h3>Tile Rush</h3>
                         <p>Inspired by Magic Tiles with unlimited levels and enhanced user experience. Test your reflexes!</p>
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="app-item">
-                    <div class="app-icon">🏪</div>
+                    <div class="app-icon"><img src="assets/app-icons/nexus-pos.png" alt="Nexus POS" class="app-icon-img"></div>
                     <div class="app-info">
                         <h3>Nexus POS</h3>
                         <p>Point of Sale app for small merchants with offline capability. Manage inventory, sales, and customers</p>
@@ -231,6 +231,7 @@
                 <div class="footer-links">
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <a href="terms.html">Terms & Conditions</a>
+                    <a href="sitemap.xml">Sitemap</a>
                 </div>
             </div>
         </div>
