--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -214,6 +214,14 @@
             <h2>Store-Specific Information</h2>
             <p><strong>Apple App Store:</strong> This app complies with Apple's App Store Review Guidelines and data collection policies.</p>
             <p><strong>Google Play Store:</strong> This app complies with Google Play's Developer Policy and data safety requirements.</p>
+
+            <h2>App-Specific Privacy Policies</h2>
+            <p>For detailed privacy information about individual applications, please visit the app-specific privacy policies:</p>
+            <ul>
+                <li><a href="nexus-pos/privacy-policy.html" class="link-secondary">Nexus POS Privacy Policy</a> - Point of Sale application for merchants</li>
+                <li><a href="tile-rush/privacy-policy.html" class="link-secondary">Tile Rush Privacy Policy</a> - Music rhythm game</li>
+            </ul>
+            <p>Each app may have specific data collection and usage practices relevant to its functionality.</p>
         </section>
     </main>
 
@@ -224,6 +232,7 @@
                 <div class="footer-links">
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <a href="terms.html">Terms & Conditions</a>
+                    <a href="sitemap.xml">Sitemap</a>
                 </div>
             </div>
         </div>
