--- a/terms.html
+++ b/terms.html
@@ -245,6 +245,7 @@
                 <div class="footer-links">
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <a href="terms.html">Terms & Conditions</a>
+                    <a href="sitemap.xml">Sitemap</a>
                 </div>
             </div>
         </div>
