--- a/nexus-pos/privacy-policy.html
+++ b/nexus-pos/privacy-policy.html
@@ -61,7 +61,7 @@
             <p><strong>Last Updated:</strong> October 13, 2025</p>
 
             <h2>1. Introduction</h2>
-            <p>Welcome to NexusPOS ("we," "our," or "us"). This Privacy Policy explains how Harmony Nexus collects, uses, discloses, and safeguards your information when you use our NexusPOS mobile application (App ID: com.nexus.nexus_pos).</p>
+            <p>Welcome to NexusPOS ("we," "our," or "us"). This Privacy Policy explains how Harmony Nexus collects, uses, discloses, and safeguards your information when you use our NexusPOS mobile application (App ID: com.zerobyte.pos).</p>
             <p>Please read this Privacy Policy carefully. By using NexusPOS, you agree to the collection and use of information in accordance with this policy. If you do not agree with our policies and practices, please do not use our application.</p>
 
             <h2>2. Information We Collect</h2>
@@ -240,7 +240,7 @@
             <p>If you have questions, concerns, or requests regarding this Privacy Policy or your data, please contact us:</p>
             <p><strong>Harmony Nexus</strong></p>
             <p><strong>Email:</strong> support@harmonynexus.com</p>
-            <p><strong>App:</strong> NexusPOS (com.nexus.nexus_pos)</p>
+            <p><strong>App:</strong> NexusPOS (com.zerobyte.pos)</p>
             <p>For data deletion requests, account support, or privacy concerns, please include:</p>
             <ul>
                 <li>Your registered email or phone number</li>
