--- a/tile-rush/privacy-policy.html
+++ b/tile-rush/privacy-policy.html
@@ -60,7 +60,7 @@
             <p><strong>Last Updated:</strong> October 13, 2025</p>
             <p><strong>Company:</strong> Harmony Nexus</p>
             <p><strong>App Name:</strong> Tile Rush</p>
-            <p><strong>App ID:</strong> com.nexus.tile_rush</p>
+            <p><strong>App ID:</strong> com.zerobyte.tile_rush</p>
 
             <h2>Introduction</h2>
             <p>Harmony Nexus ("we," "our," or "us") operates the Tile Rush mobile application (the "App"). This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile application.</p>
