--- a/developers.html
+++ b/developers.html
@@ -54,7 +54,7 @@
         </div>
     </nav>
 
-    <main class="container">
+    <!-- <main class="container">
         <section class="content-section">
             <h1>Meet Our Team</h1>
             <p>Our talented team brings diverse skills and expertise to create exceptional SaaS applications. Each member is passionate about technology and committed to delivering free, cutting-edge solutions to the community.</p>
@@ -82,7 +82,7 @@
             <h2>Join Our Team</h2>
             <p>We're always looking for talented individuals who share our passion for creating exceptional, free-to-use applications. If you're interested in joining Nexus Apps, please reach out through our <a href="contact.html" class="link-secondary">contact page</a>.</p>
         </section>
-    </main>
+    </main> -->
 
     <footer class="footer">
         <div class="container">
